# sidekar

./: .gitignore  AGENTS.md  CREDITS.md  Cargo.toml  LICENSE  MCP_INSTRUCTIONS.md  README.md  SKILL.md  TODO.md  build.rs  bump-version.sh  go.mod  install.sh  local-release.sh  minisign.key  minisign.pub  pull-release.sh  sidekar-darwin-arm64.tar.gz.minisig  tools.json  uninstall.sh
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml
context/: BUGS.md  TODO.md  architecture.md  bus-request-lifecycle.md  coding-agent-memory-prompts-analysis.md  cursor-agent-api.md  editor-agent-test-template.md  ext-auth-design.md  ext-auto-routing.md  ext-transport-migration.md  feature-pillars.md  feedback-db.md  feedback_macos_binary_xattr.md  getting-started.md  hermes-memory-analysis-v2.md  journaling.md  oauth-apps.md  relay-fly.md  relay-gcp.md  relay-tunnel-multiplex-plan.md  release-cycle.md  repl-agent.md  repl-history-undo-plan.md  repl-memory-prompt-design.md  repl-screen-output-cleanup.md  self-learning-v1-plan.md  sidekar-daemon-design.md  sidekar-orchestration-plan.md  sidekar-two-sessions.md  still-to-do.md  storage-schema.md  telegram.md  terminal-agent-test-template.md  todo-journaling.md  todo.md  unified-exec.md  www-vercel.md
docs/: mempalace-inspiration.md  repl-shared-editor-plan.md  rust-todo.md  todo.md
docs/superpowers/plans/: 2026-03-23-web-terminal-tunnel.md
extension/: README.md  background.js  content.js  generate_icons.py  inject-net.js  manifest.json  offscreen.html  offscreen.js  popup.html  popup.js  sidekar-extension.test.mjs
ios/: project.yml
ios/Sidekar/: Info.plist  SidekarApp.swift
ios/Sidekar.xcodeproj/: project.pbxproj
ios/Sidekar/Models/: AuthUser.swift  LinkedAccount.swift  Session.swift
ios/Sidekar/Services/: APIClient.swift  AuthService.swift  WebSocketManager.swift
ios/Sidekar/Utilities/: KeychainHelper.swift
ios/Sidekar/Views/: LoginView.swift  SessionCardView.swift  SessionsListView.swift  SettingsView.swift  TerminalContainerView.swift  TerminalViewWrapper.swift
prompts/: claude_code_system_prompt.txt  codex-system-prompt.txt  opencode-system-prompt.txt  pi-system-prompt.txt
relay/: Cargo.toml  Dockerfile  fly.toml
relay/src/: auth.rs  bridge.rs  main.rs  registry.rs  slack.rs  telegram.rs  types.rs
scripts/: stdin_probe.py  terminal-inject-current.sh
src/: api_client.rs  app_context.rs  auth.rs  broker.rs  browser.rs  browser_session.rs  bus.rs  cdp.rs  cdp_proxy.rs  cli.rs  code_intel.rs  command_catalog.rs  config.rs  daemon.rs  doc_intel.rs  events.rs  ext.rs  help.rs  ipc.rs  lib.rs  main.rs  mcp.rs  mcp_clients.rs  md.rs  memory.rs  message.rs  output.rs  pakt.rs  poller.rs  proxy.rs  pty.rs  repl.rs  repo.rs  rtk.rs  runtime.rs  scope.rs  scripts.rs  session.rs  skill.rs  tasks.rs  (+4 more)
src/agent/: compaction.rs  context.rs  edit_patch.rs  images.rs  mod.rs  tools.rs
src/agent/context/: tests.rs
src/agent/images/: tests.rs
src/agent/tools/: tests.rs
src/agent/unified_exec/: buffer.rs  manager.rs  mod.rs  process.rs
src/agent_cli/: cursor_family.rs  mod.rs  proxy_env.rs  tests.rs
src/agent_cli/proxy_env/: tests.rs
src/broker/: agent_registry.rs  agent_sessions.rs  auth_store.rs  bus_queue.rs  cron.rs  encryption.rs  event_log.rs  kv_store.rs  outbound.rs  proxy_log_store.rs  tests.rs  totp.rs
src/browser/: cache.rs  elements.rs  eval.rs  os_click.rs
src/browser_session/: tests.rs
src/bus/: commands.rs  nickname.rs
src/cdp/: stealth.rs  tabs.rs
src/cdp_proxy/: pool.rs
src/code_intel/: block_util.rs  extractors.rs
src/command_catalog/: account.rs  agent.rs  browser.rs  code.rs  system.rs
src/commands/: agent_sessions.rs  agent_tools.rs  batch.rs  code.rs  core.rs  cron.rs  data.rs  debug.rs  desktop.rs  doc.rs  journal.rs  kv.rs  mod.rs  monitor.rs  session.rs  system.rs  totp.rs
src/commands/batch/: tests.rs
src/commands/core/: browser.rs  page.rs
src/commands/cron/: commands.rs  runtime.rs  schedule.rs  tests.rs
src/commands/data/: emulation.rs  network.rs  page_state.rs
src/commands/interaction/: forms.rs  pointer.rs  query.rs  waiting.rs
src/daemon/: command.rs  housekeeping.rs  http.rs  tests.rs
src/desktop/: bg_input.rs  focus_guard.rs  input.rs  macos.rs  mod.rs  monitor.rs  refs.rs  screen.rs  skylight.rs  types.rs
src/doc_intel/: tests.rs
src/events/: tests.rs
src/ext/: cli.rs  verify.rs
src/ext/cli/: tests.rs
src/help/: tests.rs
src/help_text/: agent.rs  browser.rs  mod.rs  page.rs  system.rs
src/main/: repl_cmd.rs  top_level_cmds.rs
src/md/: render.rs  tests.rs
src/memory/: candidates.rs  commands.rs  hygiene.rs  store.rs  tests.rs  util.rs
src/memory/import/: commands.rs  mod.rs  (+5 more)
src/output/: tests.rs
src/pakt/: tests.rs
src/providers/: anthropic.rs  bedrock.rs  bedrock_inference.rs  cache.rs  codex.rs  gcp_adc.rs  gemini.rs  mod.rs  oauth.rs  openrouter.rs  session_lock.rs  tests.rs  vertex.rs
src/proxy/: mitm.rs  reverse.rs  tests.rs  ws.rs
src/pty/: chrome.rs  escape_filter.rs  event_loop.rs  identity.rs  session.rs
src/repl/: colors.rs  credential_login.rs  debug_export.rs  editor.rs  event_forward.rs  journal.rs  relay.rs  renderer.rs  shell_escape.rs  skills.rs  slash.rs  spinner.rs  stats.rs  status.rs  system_prompt.rs  transcript_hooks.rs  turn_stats.rs  user_turn.rs
src/repo/: actions.rs  args.rs  changes.rs  pack.rs  render.rs  tests.rs
src/rtk/: rules.rs  tests.rs
src/scope/: tests.rs
src/scripts/: extract.rs  page.rs
src/session/: tests.rs
src/tasks/: db.rs  tests.rs
src/tunnel/: transport.rs
src/utils/: browser.rs  human_input.rs  keys.rs  tests.rs
www/: .env.example  init-db.js  package-lock.json  package.json  vercel.json
www/api/: _auth.js  _db.js  script.js  sessions.js  slack.js
www/public/: approve.html  dashboard.html  devices.html  docs.html  ext-callback.html  extension.html  index.html  llms-full.txt  llms.txt  login.html  manifest.json  privacy.html  robots.txt  sessions.html  settings.html  sitemap.xml  terminal.html  terms.html
www/scripts/: install.sh
(+56 files in other folders)
