[package]
name = "sidekar"
version = "1.1.30"
edition = "2024"
build = "build.rs"

[[bin]]
name = "sidekar"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
opt-level = "z"
panic = "abort"

[dependencies]
anyhow = "1.0"
dirs = "6"
base64 = "0.22"
zip = "2.1"
futures-util = "0.3"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
csv = "1.4"
regex = "1.12"
ignore = "0.4"
globset = "0.4"
sha2 = "0.10"
tokio = { version = "1.48", features = ["rt-multi-thread", "net", "io-util", "io-std", "time", "sync", "macros", "signal", "process"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
flate2 = "1.1"
tar = "0.4"
urlencoding = "2"
minisign-verify = "0.2"
socket2 = "0.6.3"
fs2 = "0.4"
libc = "0.2"
totp-rs = { version = "5.6", features = ["gen_secret", "otpauth"] }
aes-gcm = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-rustls = "0.26"
webpki-roots = "1"
pulldown-cmark = "0.13.3"
unicode-segmentation = "1.12"
unicode-width = "0.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "1.5", features = ["async"] }
enigo = "0.6"
core-foundation = "0.10"
core-foundation-sys = "0.8"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSEnumerator", "NSURL"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication"] }
