[package]
name = "sidekar"
version = "3.2.16"
edition = "2024"
build = "build.rs"
license = "MIT"
description = "Sidecar for AI agents: browser and desktop automation, inter-agent messaging, local memory, TOTP/KV, Chrome extension control."
repository = "https://github.com/kilospark/sidekar"
homepage = "https://sidekar.dev"
readme = "README.md"

[[bin]]
name = "sidekar"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
opt-level = "z"
panic = "abort"

[dependencies]
anyhow = "1.0"
dirs = "6"
# PTY-backed long-running sessions for the agent's `ExecSession`
# tool. portable-pty is wezterm's production PTY crate; pure Rust
# on unix, wraps ConPTY on Windows. Used for interactive REPLs,
# dev servers, and TTY-needing programs the sync Bash tool can't
# host. See context/unified-exec.md for the full design.
portable-pty = "0.9"
base64 = "0.22"
zip = "2.1"
futures-util = "0.3"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toon-format = "0.4"
csv = "1.4"
regex = "1.12"
ignore = "0.4"
globset = "0.4"
sha2 = "0.10"
tokio = { version = "1.48", features = ["rt-multi-thread", "net", "io-util", "io-std", "time", "sync", "macros", "signal", "process"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
flate2 = "1.1"
tar = "0.4"
urlencoding = "2"
minisign-verify = "0.2"
socket2 = "0.6.3"
fs2 = "0.4"
libc = "0.2"
totp-rs = { version = "5.6", features = ["gen_secret", "otpauth"] }
qrcode = "0.14"
aes-gcm = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-rustls = "0.26"
webpki-roots = "1"
pulldown-cmark = "0.13.3"
unicode-segmentation = "1.12"
unicode-width = "0.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrock = "1"
aws-sdk-bedrockruntime = "1"
aws-types = "1"
bytes = "1"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "1.5", features = ["async"] }
# enigo removed — all input now goes through bg_input.rs (CGEvent + SkyLight SPI)
core-foundation = "0.10"
core-foundation-sys = "0.8"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSEnumerator", "NSURL"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication"] }
